# dashy

./: .gitignore  .pre-commit-config.yaml  README.md  conf.py.dist  pyproject.toml  requirements.txt  spotify-dance.py
dashy/: __main__.py  dashy.py  utils.py
dashy/dashboards/: __init__.py  plex_dashboard.py  slideshow_dashboard.py  spotify_dashboard.py  weather_dashboard.py
dashy/displays/: __init__.py  inky_auto.py  inky_base.py  inky_impressions73.py  save_to_disk.py
dashy/sensors/: __init__.py  gpio_button.py
dashy/services/: __init__.py  aiohttp.py  asyncpio.py  playwright.py
dashy/utils/: __init__.py  double_click_detector.py
